Fixed the alignment of the icons inside the input tags. Finished the mobile layout.

--- a/styles.css
+++ b/styles.css
@@ -9,12 +9,22 @@ body {
     background-color: hsl(185, 41%, 84%);
 }
 
-h3 {
+.input-field-div {
     position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: .3em;
+}
+
+.icon {
+    position: absolute;
+    top: 50px;
+    left: 15px;
 }
 
 /* Typography */
 
+.input-field-div,
 h3 {
     color: hsl(186, 14%, 43%);
 }
@@ -103,6 +113,7 @@ input {
 }
 
 .display-costs {
+    margin-top: 2em;
     background-color: hsl(183, 100%, 15%);
     padding: 1.5em 1em;
     border-radius: 10px;
@@ -110,6 +121,7 @@ input {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(4, auto);
     align-items: start;
+
 }
 
 .display-costs span {
@@ -150,6 +162,7 @@ input {
     padding: .3em;
     background-color: hsl(172, 67%, 45%);
     margin-top: .5em;
+    margin-bottom: 0;
 }
 
 /* Inputs */
@@ -171,8 +184,4 @@ input::-webkit-inner-spin-button {
 
 input[type=number] {
     -moz-appearance: textfield;
-}
-
-.icon {
-    position: absolute;
 }
